styles.css
body {
  margin: 0;
}
p {
  margin: 0;
}
button {
  padding: 0;
  border: none;
  background-color: transparent;
  cursor: pointer;
}
input {
  border: none;
}
a {
  color: inherit;
  text-decoration: none;
}

:root {
  /* 기본 색상 */
  --primary-color: #f8b49b; /* 연한 살구색 */
  --accent-color: #ef835d; /* 강조색 (버튼, 아이콘) */
  --accent-hover: #dc5b28; /* 호버 상태 색상 */
  --header-bg-color: #f2d8d9; /* 헤더/히어로 배경색 */
  --dark-bg: #2c3e50; /* 다크 배경 (구독 섹션) */

  /* 텍스트 색상 */
  --text-color: #333; /* 기본 텍스트 */
  --text-light: #666; /* 밝은 텍스트 */
  --text-lighter: #f2e9d8; /* 더 밝은 텍스트 */

  /* 기타 */
  --border-color: #eee; /* 테두리 색상 */

  /* 그림자 효과 */
  --shadow-sm: 0 2px 5px rgba(0, 0, 0, 0.1);
  --shadow-md: 0 4px 8px rgba(0, 0, 0, 0.1);
  --shadow-lg: 0 4px 15px rgba(0, 0, 0, 0.1);

  /* 상단 fixed 크기 */
  --fixed-nav-height: 4.75rem;

  /* 갤러리 */
  --galary-card-size: 16.25rem;

  /* content 범위 */
  --content-w-md: 768px;
  --content-w-lg: 1024px;

  /* modal */
  --modal-bg: rgba(0, 0, 0, 0.3);
}

/* header */
header {
  margin-top: var(--fixed-nav-height);
}
.header-container {
  display: flex;
  flex-direction: column;
  background-color: var(--header-bg-color);
  align-items: center;
}
.fixed-top-nav {
  position: fixed;
  top: 0;
  width: 100%;
  background-color: var(--header-bg-color);
  box-sizing: border-box;
  z-index: 100;
}
.nav-bar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1.25rem;
  margin: 0 auto;
  /* 햄버거 메뉴 nav-item-list가 참조 */
  position: relative;
  height: var(--fixed-nav-height);
}
.logo-icon-inner {
  width: 5.75rem;
  aspect-ratio: 5.75 / 2;
  cursor: pointer;
}
.logo-icon-inner > img {
  width: 100%;
}
.hamburger-menu-group {
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}
.nav-item-list {
  display: flex;
  flex-direction: column;
  align-items: center;
  position: absolute;
  right: 0;
  top: var(--fixed-nav-height);
  opacity: 0;
  z-index: -1;
}
.hamburger-menu-toggle ~ .nav-item-list {
  transform: translateY(-100%);
  transition: all 0.3s ease;
}
.hamburger-menu-toggle:checked ~ .nav-item-list {
  transform: translateY(0);
  opacity: 1;
  z-index: 101;
}
.hamburger-menu-toggle:checked ~ .nav-item-list > .nav-item {
  background-color: var(--header-bg-color);
  padding: 1rem 2rem;
  width: 4rem;
  text-align: center;
}
.hamburger-menu-toggle:checked ~ .nav-item-list > .download-btn {
  margin-top: 1rem;
}
.hamburger-menu-toggle-lbl {
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  z-index: 102;
}
.hero-container {
  display: flex;
  flex-direction: column;
  gap: 1.875rem;
  padding: 2rem 5rem;
  align-items: center;
  overflow: hidden;
}
.hero-text-group {
  display: flex;
  flex-direction: column;
  gap: 1.875rem;
  align-items: center;
  text-align: center;
}
.hero-title {
  font-size: 1.5rem;
  font-weight: 700;
  line-height: 100%;
  overflow: visible;
}
.hero-introduce {
  font-size: 0.875rem;
  font-weight: 400;
}
.accent-btn {
  padding: 0.75rem 1.5rem;
  background-color: var(--accent-color);
  font-size: 0.875rem;
  color: white;
  font-weight: 700;
  border-radius: 40px;
}
.hero-img-inner {
  width: 12.25rem;
  margin-bottom: -6rem;
}
.hero-img-inner > img {
  width: 100%;
}

/* main */
.main-container {
  display: flex;
  flex-direction: column;
  padding: 2rem;
  gap: 3.5rem;
}
.main-card {
  display: flex;
  flex-direction: column;
  gap: 2.5rem;
}
.main-card-img-inner {
  min-width: 20.375rem;
  aspect-ratio: 20.375 / 11.875;
  border-radius: 18px;
  overflow: hidden;
  box-shadow: var(--shadow-lg);
}
.main-card-img-inner > img {
  width: 100%;
  margin-top: -3rem;
}
.main-card-content {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}
.main-card-title {
  font-size: 1.5rem;
  font-weight: 700;
}
.main-card-desc {
  font-size: 0.875rem;
  font-weight: 400;
}
.galary-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1.875rem;
}
.galary-text-group {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 1.875rem;
}
.galary-title {
  font-size: 1.5rem;
  font-weight: 700;
  color: var(--accent-color);
  text-align: center;
}
.galary-desc {
  text-align: center;
}
.keyword {
  color: var(--accent-color);
}
.galary-card-list {
  width: 90%;
  overflow: hidden;
}
.galary-card-list-inner {
  display: flex;
  /* TODO width를 고정? */
  /* animation: slide 6s linear infinite; */
  box-sizing: border-box;
}
.galary-card {
  margin-left: 0.625rem;
  margin-right: 0.625rem;
}
.galary-card-img-inner {
  width: var(--galary-card-size);
  aspect-ratio: 1 / 1;
  border-radius: 18px;
  overflow: hidden;
  box-shadow: var(--shadow-lg);
}
.galary-card-img-inner > img {
  width: 100%;
}
.galary-more-content {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  align-items: start;
}
.learn-more {
  align-self: end;
  white-space: nowrap;
}

.subscribe-card {
  background-color: var(--dark-bg);
  border-radius: 18px;
  color: white;
  display: flex;
  flex-direction: column;
  align-items: start;
  padding: 1.875rem 2rem;
  gap: 1.25rem;
  margin-bottom: -6.5rem;
  z-index: 1;
}
.subscribe-card-text-group {
  display: flex;
  flex-direction: column;
  gap: 0.625rem;
}
.subscribe-card-title {
  font-size: 1.5rem;
  font-weight: 700;
}
.subscribe-card-desc {
  font-size: 0.875rem;
  font-weight: 400;
  position: relative;
}
.email-input-container {
  display: flex;
  flex-direction: column;
  width: 100%;
  gap: 1.25rem;
  justify-content: center;
}
.email-input-group {
  position: relative;
}
.email-input-icon-inner {
  position: absolute;
  width: 1.125rem;
  aspect-ratio: 1 / 1;
  top: 50%;
  left: 1rem;
  transform: translateY(-50%);
  display: flex;
  align-items: center;
}
.email-input-icon-inner > img {
  width: 100%;
}
.email-input {
  border-radius: 60px;
  padding: 0.75rem 1rem;
  width: 100%;
  padding-left: 2.5rem;
  box-sizing: border-box;
}
.email-input::placeholder {
  font-size: 0.75rem;
  font-weight: 400;
}
.subscribe-btn {
  align-self: flex-end;
}

.footer-container {
  display: flex;
  flex-direction: column;
}
.footer-img-inner > img {
  width: 100%;
}
.footer-menu {
  display: flex;
  justify-content: space-between;
  padding: 1.25rem 1.5rem;
}
.footer-main-menu {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.footer-logo-icon-inner {
  width: 7rem;
}
.footer-logo-icon-inner > img {
  width: 100%;
}
.sns-icon-item-list {
  display: flex;
  gap: 1rem;
}
.sns-icon-btn {
  width: 2rem;
  aspect-ratio: 1 / 1;
  border-radius: 50%;
  background-color: var(--accent-color);
  display: flex;
  justify-content: center;
  align-items: center;
}
.sns-icon-btn > img {
  width: 1.125rem;
  aspect-ratio: 1 / 1;
}
.footer-site-map-item-list {
  display: flex;
  flex-direction: column;
  align-items: end;
  gap: 1rem;
  color: var(--text-light);
}

/* modal */
.modal {
  display: flex;
  position: fixed;
  width: 100%;
  height: 100%;
  background-color: var(--modal-bg);
  z-index: 1000;
  top: 0;
  left: 0;
  justify-content: center;
  align-items: center;
}
.window {
  width: 18.75rem;
  aspect-ratio: 1 / 1;
  background-color: var(--header-bg-color);
  border-radius: 30px;
  padding: 1.875rem 4.375rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.window-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1.25rem;
}
.window-img-inner {
  width: 3.75rem;
  aspect-ratio: 1 / 1;
}
.window-img-inner > img {
  width: 100%;
}
.window-text-group {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  gap: 0.375rem;
}
.window-title {
  font-size: 1.5rem;
  font-weight: 700;
  color: var(--accent-color);
}
.window-desc {
  font-size: 0.875rem;
  font-weight: 400;
}

@keyframes slide {
  0% {
    transform: translateX(0%);
  }
  15% {
    transform: translateX(0%);
  }
  30% {
    transform: translateX(calc(var(--galary-card-size) * -1));
  }
  45% {
    transform: translateX(calc(var(--galary-card-size) * -1));
  }
  60% {
    transform: translateX(calc(var(--galary-card-size) * -2));
  }
  75% {
    transform: translateX(calc(var(--galary-card-size) * -2));
  }
  100% {
    transform: translateX(0%);
  }
}

@media (min-width: 768px) {
  .nav-item-list {
    display: flex;
    align-items: center;
    gap: 1.875rem;
  }
  .nav-bar {
    max-width: var(--content-w-lg);
  }
  .hamburger-menu-toggle-lbl {
    display: none;
  }
  .hamburger-menu-toggle ~ .nav-item-list {
    display: flex;
    flex-direction: row;
    position: relative;
    transition: none;
    transform: translateY(0);
    top: 0;
    opacity: 1;
  }
  .hamburger-menu-toggle:checked ~ .nav-item-list > .nav-item {
    background-color: transparent;
    padding: 0;
    width: auto;
    text-align: center;
  }
  .hamburger-menu-toggle:checked ~ .nav-item-list > .download-btn {
    margin-top: 0;
  }

  .hero-container {
    flex-direction: row;
    margin: 0 auto;
    max-width: var(--content-w-lg);
  }
  .hero-text-group {
    gap: 2.5rem;
    text-align: left;
    align-items: start;
    max-width: 46rem;
  }
  .hero-title {
    font-size: 3rem;
    font-weight: 700;
  }
  .hero-introduce {
    font-size: 1rem;
  }
  .hero-img-inner {
    width: 26rem;
    flex-shrink: 0;
    margin-bottom: -10rem;
  }

  .main-container {
    max-width: var(--content-w-lg);
    margin: 0 auto;
    gap: 7.5rem;
  }
  .main-card {
    flex-direction: row;
    gap: 0;
  }
  .main-card-img-inner {
    width: 41.25rem;
    flex: 1;
  }
  .main-card-img-inner > img {
    margin-top: 0;
  }
  .main-card-content {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 2.5rem 4rem;
    flex: 1;
  }
  .main-card-title {
    font-size: 2rem;
  }
  .main-card-desc {
    font-size: 1rem;
  }

  .galary-content {
    gap: 5.625rem;
  }
  .galary-text-group {
    gap: 2.5rem;
  }
  .galary-title {
    font-size: 3rem;
  }
  .galary-card-list {
    overflow: visible;
  }
  .galary-card-list-inner {
    gap: 4.5rem;
    justify-content: center;
  }
  .galary-card-img-inner {
    width: 23.625rem;
  }
  .galary-more-content {
    max-width: var(--content-w-md);
    flex-direction: row;
    align-items: center;
  }
  .galary-more-desc {
    flex: 9;
  }
  .learn-more {
    flex: 1;
    align-self: center;
  }

  .subscribe-card {
    flex-direction: row;
    align-items: center;
    padding: 3.125rem 3.625rem;
    margin-bottom: -9rem;
  }
  .subscribe-card-text-group {
    gap: 1.125rem;
  }
  .subscribe-card-title {
    font-size: 2rem;
  }
  .email-input-container {
    position: relative;
  }
  .email-input {
    padding: 1rem 1rem;
    padding-left: 2.5rem;
  }
  .subscribe-btn {
    position: absolute;
    right: 0.25rem;
  }

  .footer-img-inner {
    height: 21.25rem;
    overflow: hidden;
  }
  .footer-img-inner > img {
    margin-top: -12rem;
  }
  .footer-menu {
    justify-content: center;
  }
  .footer-main-menu {
    max-width: var(--content-w-lg);
    flex: 1;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
  }
  .footer-site-map-item-list {
    display: none;
  }

  .window {
    width: 37.5rem;
    aspect-ratio: 1.5 / 1;
  }
  .window-img-inner {
    width: 6.875rem;
  }
  .window-title {
    font-size: 2rem;
  }
  .modal-close-btn {
    padding: 1rem 1.875rem;
  }
}

.hidden {
  display: none;
}

